syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "InventoryGrpcService";
option java_package = "inventorygrpc";

service InventoryService {
  // unary
  rpc getItemsStock (GetItemsRequest) returns (ItemsResponse);
  rpc addItemsStock(AddItemsRequest) returns (ItemsResponse);
  rpc deductItemsStock(DeductItemsRequest) returns (ItemsResponse);
}

message GetItemsRequest {
  repeated GetItemRequest items = 1;
}

message GetItemRequest {
  string id = 1;
}

message ItemsResponse {
  repeated ItemResponse items = 1;
}

message ItemResponse {
  string id = 1;
  int32 quantity = 2;
}

message AddItemRequest {
  string id = 1;
  int32 quantity = 2;
}

message AddItemsRequest {
  repeated AddItemRequest items = 1;
}

message DeductItemRequest {
  string id = 1;
  int32 quantity = 2;
}

message DeductItemsRequest {
  repeated DeductItemRequest items = 1;
}